--- a/main.html
+++ b/main.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-	<div>
-	id="Welcome to the world of Web development"	
+	<div id="Welcome to the world of Web development">
 	</div>
 	<!-- the entire body must be written by student -->
 	
